--- a/.github/workflows/janus-ci.yml
+++ b/.github/workflows/janus-ci.yml
@@ -10,8 +10,31 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # 使用最新的 Ubuntu 环境进行构建
-
+    runs-on: ubuntu-22.04  # 使用最新的 Ubuntu 环境进行构建
+    strategy:
+      matrix:
+        compiler: [gcc, clang]
+        datachannels: ["yes", "no"]
+        libcurl: ["yes", "no"]
+        include:
+          - datachannels: "yes"
+            libcurl: "yes"
+            deps_from_src: "yes"
+            janus_config_opts: ""
+          - datachannels: "yes"
+            libcurl: "no"
+            deps_from_src: "no"
+            janus_config_opts: "--disable-aes-gcm -disable-mqtt --disable-mqtt-event-handler --disable-turn-rest-api --disable-sample-event-handler"
+          - datachannels: "no"
+            libcurl: "yes"
+            deps_from_src: "no"
+            janus_config_opts: "--disable-aes-gcm -disable-mqtt --disable-mqtt-event-handler --disable-data-channels"
+        exclude:
+          - datachannels: "no"
+            libcurl: "no"
+    env:
+        CC: ${{ matrix.compiler }}
+        
     steps:
     # Step 1: 检出代码
     - name: Checkout code
@@ -19,24 +42,65 @@ jobs:
 
     # Step 2: 安装依赖
     - name: Install dependencies
+      run: >
+        sudo apt-get update && sudo apt-get --no-install-recommends -y install
+        autoconf
+        cmake
+        duktape-dev
+        gtk-doc-tools
+        libavcodec-dev
+        libavformat-dev
+        libavutil-dev
+        libcollection-dev
+        libconfig-dev
+        libevent-dev
+        libglib2.0-dev
+        libgirepository1.0-dev
+        liblua5.3-dev
+        libjansson-dev
+        libmicrohttpd-dev
+        libmount-dev
+        libnanomsg-dev
+        libogg-dev
+        libopus-dev
+        librabbitmq-dev
+        libsofia-sip-ua-dev
+        libssl-dev
+        libtool
+        libvorbis-dev
+        ninja-build
+        openssl
+    - name: setup additional dependencies from apt
+      if: ${{ matrix.deps_from_src == 'no' }}
+      run: >
+        sudo apt-get --no-install-recommends -y install
+        libnice-dev
+        libsrtp2-dev
+        libusrsctp-dev
+        libwebsockets-dev
+    - name: install libcurl from apt
+      if: ${{ matrix.libcurl == 'yes' }}
+      run: sudo apt-get --no-install-recommends -y install libcurl4-openssl-dev
+    - name: setup python
+      if: ${{ matrix.deps_from_src == 'yes' }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+        architecture: 'x64'        
+    - name: install python packages
+      if: ${{ matrix.deps_from_src == 'yes' }}
+      run: pip install wheel meson
+      
+    - name: setup libnice from sources
+      if: ${{ matrix.deps_from_src == 'yes' }}
       run: |
-        sudo apt-get update
-        sudo apt-get install -y \
-          build-essential \
-          git \
-          pkg-config \
-          libmicrohttpd-dev \
-          libssl-dev \
-          libcurl4-openssl-dev \
-          libjansson-dev \
-          libsofia-sip-ua-dev \
-          libsrtp2-dev \
-          libconfig-dev \
-          libwebsockets-dev \
-          libtool \
-          autoconf \
-          automake
-
+        git clone --depth 1 --quiet -b master https://gitlab.freedesktop.org/libnice/libnice.git libnice
+        pushd libnice
+        if [ $CC = clang ]; then LNICE_CFLAGS="-Wno-cast-align"; fi;
+        meson setup -Dprefix=/usr -Dlibdir=lib -Dc_args="$LNICE_CFLAGS" -Ddebug=false -Doptimization=0 -Dexamples=disabled -Dgtk_doc=disabled -Dgupnp=disabled -Dgstreamer=disabled -Dtests=disabled build
+        ninja -C build
+        sudo ninja -C build install    
+        
     # Step 3: 编译 Janus Gateway
     - name: Compile Janus Gateway
       run: |
